updated the paragraph

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
 	<h1>Node JS Home</h1><br>
-	<p>I use Node.JS, and a little HTML/CSS to make this simple but funtional website.</p>
+	<p>I am Andrei, I use Node.JS, a little bit of HTML, and CSS to make this simple but funtional website.</p>
 </body>
 
 </html>
