added chat page and functionality

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Andrei Node JS Review</title>
+	<title>Andrei's Node JS</title>
 	<style>
 		* {
 			margin: 0;
@@ -56,6 +56,9 @@
 		youtube and my experience.</p>
 	<div class="links">
 		<a href="/about">About Page</a>
+	</div>
+	<div class="links">
+		<a href="/chat">Let's Chat!</a>
 	</div>
 
 </body>
