--- a/public/socmed.html
+++ b/public/socmed.html
@@ -11,6 +11,7 @@
   <img id="igImage" src="" alt="instagram image">
   <h2><span id="username"></span></h2>
   <p><span id="biography"></span></p>
+  <p><span id="igid"></span></p>
   <script src="./socmed.js"></script>
 </body>
 </html>
