covid update api feature added

--- a/public/chat.html
+++ b/public/chat.html
@@ -14,19 +14,20 @@
 	<div class="app">
 		<div class="screen join-screen active">
 			<div class="form">
-				<h2>Join Chatroom</h2>
+				<h2>Join Lounge 📈 </h2>
 				<div class="form-input">
 					<label for="">Username</label>
 					<input type="text" id="username">
 				</div>
 				<div class="form-input">
+					<a href="/">Return</a>
 					<button id="join-user">Join</button>
 				</div>
 			</div>
 		</div>
 		<div class="screen chat-screen">
 			<div class="header">
-				<div class="logo">Chatroom</div>
+				<div class="logo">Lounge 🚸 </div>
 				<button id="exit-chat">Exit</button>
 			</div>
 			<div class="messages">
@@ -56,7 +57,7 @@
 
 
 	<script type="text/javascript" src="socket.io/socket.io.js"></script>
-	<script type="text/javascript" src="./code.js"></script>
+	<script type="text/javascript" src="./chat.controller.js"></script>
 </body>
 
 </html>
