--- a/public/socmed.html
+++ b/public/socmed.html
@@ -12,6 +12,6 @@
   <h2><span id="username"></span></h2>
   <p><span id="biography"></span></p>
   <p><span id="igid"></span></p>
-  <script src="./socmed.js"></script>
+  <script src="./socmed.controller.js"></script>
 </body>
 </html>
