--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,21 @@
 
 		.row {
 			display: grid;
-			grid-template-columns: auto auto auto auto auto auto;
+			grid-template-columns: auto auto auto;
+		}
+
+		@media only screen and (max-width: 768px) {
+			.row {
+				display: grid;
+				grid-template-columns: auto auto;
+				margin: 25px 10px 25px 10px;
+			}
+		}
+
+		@media only screen and (max-width: 425px) {
+			.hashtag {
+				font-size: 15px;
+			}
 		}
 
 		.row > div {
@@ -77,7 +91,7 @@
 			<div class="col3"></span><strong>ACTIVE CASES:</strong><span></span><span id="activecases"></span></div>
 			<div class="col3"></span><strong>UPDATED(🔁):</strong><span></span><span id="lastupdate"></span></div>
 		</div>
-		<p>MASK😷 HUGAS👏 IWAS📏 +BAKUNA💉</p>
+		<p class="hashtag">MASK😷 HUGAS👏 IWAS📏 +BAKUNA💉</p>
 	</div>
 	<div class="toppart">
 		<h1>Home Page served by Node.JS!</h1><br>(oh yeah!)
