add to nedb feature initial commit

--- a/public/index.html
+++ b/public/index.html
@@ -65,9 +65,9 @@
 			}
 		}
 
-		.row > div {
+		.row>div {
 			text-align: center;
-			font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+			font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 		}
 
 		#recovered {
@@ -103,6 +103,9 @@
 	</div>
 	<div class="links">
 		<a href="/chat">Let's Chat!</a>
+	</div>
+	<div class="links">
+		<a href="/visitorForm">Drop me a comment!</a>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
