--- a/public/visitorForm.html
+++ b/public/visitorForm.html
@@ -9,6 +9,12 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<script src="visitorForm.controller.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"
+		integrity="sha512-P/Je1zlTfRugG4aRZRx9hYRVph2CkbpchkgP6ub1gNF/VNHDUNq0/WOY0CSLMmwEXxrQ7HohFmMenWGpx8ZzvQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"
+		integrity="sha512-hAm8hj9/2EIonvS+sf0G3anaY8zYHv6q7ktNlLTg8wLwFvhUavnDdH0gif8SA3U1kN0lyKBWbf1wD4+5BfaMMA=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
@@ -20,17 +26,21 @@
 			website bigger than this in the future, like a simple social media site (lol).</p>
 		<form action="">
 			<label for="name">What's your name: </label><br>
-			<input type="text" name="name" id="name" required><br>
+			<input type="text" id="name" required><br>
 			<label for="email">Email: </label><br>
-			<input type="email" name="email" id="email"><br>
+			<input type="email" id="email"><br>
 			<label for="comment">Message or Comment: </label><br>
-			<textarea name="" id="" cols="100" rows="5"></textarea><br>
+			<input type="text" id="comment"><br>
 			<label for="status">Status/Feeling:</label><br>
-			<input type="text" name="status" id="status" placeholder="Feeling right now?">
-			<input class="btn btn-success" type="submit"> | <a class="btn btn-default" href="/">Go Back</a>
+			<input type="text" id="status" placeholder="Feeling right now?"><br><br>
+			<input class="btn btn-success" type="submit" id="submit"> | <a class="btn btn-default" href="/">Go Back</a>
 		</form>
 		<br>
 		<hr><br>
+		<!-- <div class="table" id="dataName"></div> -->
+	</div>
+
+
 	</div>
 
 </body>
