--- a/public/visitorForm.html
+++ b/public/visitorForm.html
@@ -5,44 +5,52 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Message Box</title>
+	<title>Visitor's Wall</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	<script src="visitorForm.controller.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"
 		integrity="sha512-P/Je1zlTfRugG4aRZRx9hYRVph2CkbpchkgP6ub1gNF/VNHDUNq0/WOY0CSLMmwEXxrQ7HohFmMenWGpx8ZzvQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"
 		integrity="sha512-hAm8hj9/2EIonvS+sf0G3anaY8zYHv6q7ktNlLTg8wLwFvhUavnDdH0gif8SA3U1kN0lyKBWbf1wD4+5BfaMMA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<style>
+		.visitorform {
+			margin-top: 250px;
+		}
+	</style>
 </head>
 
 <body>
-	<div class="container">
-		<h1>What can you say about my toy project?</h1>
-		<hr>
-		<p>Thanks for visiting my toy website!(I have bootstrap 3 installed on this page). Please give me something like
-			feedback or nice comments. Hope I can make a
-			website bigger than this in the future, like a simple social media site (lol).</p>
-		<form action="">
-			<label for="name">What's your name: </label><br>
-			<input type="text" id="name" required><br>
-			<label for="email">Email: </label><br>
-			<input type="email" id="email"><br>
-			<label for="comment">Message or Comment: </label><br>
-			<input type="text" id="comment"><br>
-			<label for="status">Status/Feeling:</label><br>
-			<input type="text" id="status" placeholder="Feeling right now?"><br><br>
-			<input class="btn btn-success" type="submit" id="submit"> | <a class="btn btn-default" href="/">Go Back</a>
-		</form>
-		<br>
-		<hr><br>
-		<!-- <div class="table" id="dataName"></div> -->
+	<div class="visitorform">
+		<div class="container">
+			<hr>
+			<h1>What can you say about my toy project?</h1>
+			<hr>
+			<p>Thanks for visiting my toy website!(I have bootstrap 3 installed on this page). Please give me something like
+				feedback or nice comments. Hope I can make a
+				website bigger than this in the future, like a simple social media site (lol).</p>
+			<form action="">
+				<label for="name">What's your name: </label><br>
+				<input type="text" id="name" required><br>
+				<label for="email">Email: </label><br>
+				<input type="email" id="email"><br>
+				<label for="comment">Message or Comment: </label><br>
+				<input type="text" id="comment"><br>
+				<label for="status">Status/Feeling:</label><br>
+				<input type="text" id="status" placeholder="Feeling right now?"><br><br>
+				<input class="btn btn-success" type="submit" id="submit"> | <a class="btn btn-default" href="/">Go Back</a>
+			</form>
+			<br>
+			<hr>
+			<h2>Visitor's List</h2>
+			<hr>
+			<div class="table" id="dataName"></div>
+		</div>
 	</div>
 
 
-	</div>
-
+	<script src="visitorForm.controller.js"></script>
 </body>
 
 </html>
