bad request fix, removed selfie feature

--- a/public/visitorForm.html
+++ b/public/visitorForm.html
@@ -15,9 +15,9 @@
 		integrity="sha512-hAm8hj9/2EIonvS+sf0G3anaY8zYHv6q7ktNlLTg8wLwFvhUavnDdH0gif8SA3U1kN0lyKBWbf1wD4+5BfaMMA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<style>
-		.visitorform {
+		/* .visitorform {
 			margin-top: 250px;
-		}
+		} */
 	</style>
 </head>
 
