refactor html and reference to css files

--- a/public/about.html
+++ b/public/about.html
@@ -6,49 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>About Page</title>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-		}
-
-		h1 {
-			font-size: 5rem;
-		}
-
-		.toppart {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 80vh;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
-			background-color: coral;
-			color: white;
-		}
-
-		p {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
-			font-size: 25px;
-		}
-
-		.links {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
-		}
-
-		a {
-			font-size: 2rem;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
+	<div class="links">
+		<a href="/">Home Page</a>
+	</div>
 	<div class="toppart">
 		<h1>About Page</h1><br>
 		A little bit of me :)
@@ -58,9 +22,7 @@
 		AngularJS</p>
 	<p>Still a work in progress but I can get the job done.</p>
 	<p>andreimartinbaquino@gmail.com | github.com/dreingineer | Manila and Mandaluyong, Philippines</p>
-	<div class="links">
-		<a href="/">Home Page</a>
-	</div>
+
 
 </body>
 
