--- a/public/index.html
+++ b/public/index.html
@@ -6,78 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>AndreiJS</title>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-		}
-
-		.toppart {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 80vh;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
-			background-color: green;
-			color: white;
-		}
-
-		.links {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
-		}
-
-		h1 {
-			font-size: 5rem;
-		}
-
-		p {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-family: Verdana, Geneva, Tahoma, sans-serif;
-			font-size: 25px;
-		}
-
-		a {
-			font-size: 2rem;
-		}
-
-		.row {
-			display: grid;
-			grid-template-columns: auto auto auto;
-		}
-
-		@media only screen and (max-width: 768px) {
-			.row {
-				display: grid;
-				grid-template-columns: auto auto;
-				margin: 25px 10px 25px 10px;
-			}
-		}
-
-		@media only screen and (max-width: 425px) {
-			.hashtag {
-				font-size: 15px;
-			}
-		}
-
-		.row>div {
-			text-align: center;
-			font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-		}
-
-		#recovered {
-			color: green;
-		}
-
-		#activecases {
-			color: crimson
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
