--- a/public/visitorForm.html
+++ b/public/visitorForm.html
@@ -14,22 +14,18 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"
 		integrity="sha512-hAm8hj9/2EIonvS+sf0G3anaY8zYHv6q7ktNlLTg8wLwFvhUavnDdH0gif8SA3U1kN0lyKBWbf1wD4+5BfaMMA=="
 		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-	<style>
-		/* .visitorform {
-			margin-top: 250px;
-		} */
-	</style>
+	<link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 
 <body>
-	<div class="visitorform">
+	<div class="">
 		<div class="container">
 			<hr>
 			<h1>What can you say about my toy project?</h1>
 			<hr>
 			<p>Thanks for visiting my toy website!(I have bootstrap 3 installed on this page). Please give me something like
 				feedback or nice comments. Hope I can make a
-				website bigger than this in the future, like a simple social media site (lol).</p>
+				website bigger than this in the future, like a simple social media site.</p>
 			<form action="">
 				<label for="name">What's your name: </label><br>
 				<input type="text" id="name" required><br>
