--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>AndreiJS</title>
+	<title>AndreiMartinAquino</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
 </head>
 
 <body>
@@ -50,30 +51,78 @@
 
 	<div class="canvas">
 		<div class="container canvas-inner">
-			<h1>Welcome to My Nth Page</h1>
-			<p>"You mustn't let mistakes weigh you down. Acknowledge them and take what you've learned to move on. That is the
-				privilege of being a man." ~ Full Frontal</p>
+
+			<div class="content-row-inner">
+				<div class="contentone-column1">
+					<h1 class="welcomebanner">ANDREI MARTIN AQUINO</h1>
+				</div>
+
+				<div class="contenttwo-column2">
+					<div class="contenttwo-row">
+						<div class="col"><i class="fa fa-terminal" aria-hidden="true"></i>
+							<h5>Web Development</h5>
+							<p>Web developer</p>
+						</div>
+						<div class="col"><i class="fa fa-signal" aria-hidden="true"></i>
+							<h5>Engineering</h5>
+							<p>RF Engineer</p>
+						</div>
+						<div class="col"><i class="fa fa-bicycle" aria-hidden="true"></i>
+							<h5>Bike Hobbyist</h5>
+							<p>New to this hobby</p>
+						</div>
+						<div class="col"><i class="fa fa-heart-o" aria-hidden="true"></i>
+							<h5>Pet Owner</h5>
+							<p>Furrdad, Meowddy</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div>
-		<p>🇵🇭 <span id="country"></span>Covid-19 update: </p>
-		<div class="row1">
-			<div class="col1"></span><strong>INFECTED:</strong><span></span><span id="infected"></span></div>
-			<div class="col2"></span><strong>TESTED:</strong><span></span><span id="tested"></span></div>
-			<div class="col3"></span><strong>RECOVERED:</strong><span></span><span id="recovered"></span></div>
-			<div class="col3"></span><strong>DECEASED(✝):</strong><span></span><span id="deceased"></span></div>
-			<div class="col3"></span><strong>ACTIVE CASES:</strong><span></span><span id="activecases"></span></div>
-			<div class="col3"></span><strong>UPDATED(🔁):</strong><span></span><span id="lastupdate"></span></div>
+
+	<div class="container">
+		<p>🇵🇭 <span id="country"></span> Covid-19 update:</p>
+		<div class="container-fluid">
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>INFECTED: </xstrong><span></span><span
+						id="infected"></span></div>
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>TESTED: </strong><span></span><span id="tested"></span>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>RECOVERED: </strong><span></span><span
+					id="recovered"></span></div>
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>DECEASED(✝): </strong><span></span><span
+					id="deceased"></span>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>ACTIVE CASES: </strong><span></span><span
+					id="activecases"></span>
+			</div>
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>UPDATED(🔁): </strong><span></span><span
+					id="lastupdate"></span>
+			</div>
 		</div>
+		<br>
 		<p class="hashtag">MASK😷 HUGAS👏 IWAS📏 +BAKUNA💉</p>
 	</div>
-	<div class="footer">
 
+	<div class="footer">
+		<div class="footer-row">
+			<div class="footer-column">
+				<img class="litrato" src="./images/whoami.jpg" alt="this is me">
+			</div>
+			<div class="footer-column">
+				<blockquote>
+					<p>"You mustn't let mistakes weigh you down. Acknowledge them and take what you've learned to move on. That is
+						the
+						privilege of being a man."</p>
+					<footer>Full Frontal</footer>
+				</blockquote>
+			</div>
+		</div>
 	</div>
+
 	<div class="footnote">
-		I used Node.JS, JavaScript,and HTML/CSS to create this simple but funtional website. Thanks to free resources in
-		youtube and also experience. I am almost finished with the logic/backend part, and my pages are still a work in
-		progress. - Andrei
+		I used Node.JS, JavaScript, HTML, and CSS to create this simple but funtional website. Thanks to free resources in
+		youtube and experience to create this. Andrei Aquino 2021
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
