polished and updated the index page

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://rawgit.com/moment/moment/2.2.1/min/moment.min.js"></script>
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Tourney:wght@100&display=swap');
+	</style>
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Tourney:wght@100&display=swap');
+	</style>
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -84,11 +92,12 @@
 	<div class="container">
 		<p>🇵🇭 <span id="country"></span> Covid-19 update:</p>
 		<div class="container-fluid">
-			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>INFECTED: </xstrong><span></span><span
+			<div class="col-md-4 col-sm-6 col-xs-12 info"></span><strong>INFECTED: </xstrong><span></span><span
 						id="infected"></span></div>
-			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>TESTED: </strong><span></span><span id="tested"></span>
+			<div class="col-md-4 col-sm-6 col-xs-12 info"></span><strong>TESTED: </strong><span></span><span
+					id="tested"></span>
 			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>RECOVERED: </strong><span></span><span
+			<div class="col-md-4 col-sm-6 col-xs-12 info"></span><strong>RECOVERED: </strong><span></span><span
 					id="recovered"></span></div>
 			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>DECEASED(✝): </strong><span></span><span
 					id="deceased"></span>
@@ -110,19 +119,25 @@
 				<img class="litrato" src="./images/whoami.jpg" alt="this is me">
 			</div>
 			<div class="footer-column">
-				<blockquote>
-					<p>"You mustn't let mistakes weigh you down. Acknowledge them and take what you've learned to move on. That is
-						the
-						privilege of being a man."</p>
-					<footer>Full Frontal</footer>
+				<blockquote class="quote">
+					<p>Hi there! I am Andrei, 33 years old. I started developing web apps since 2018. This is my first personal
+						site made out from scratch. Still, this is a work in progress and made of hardwork.</p>
+					<footer>Dreingineer</footer>
 				</blockquote>
 			</div>
 		</div>
+		<a href='https://www.freepik.com/vectors/background'>Background vector created by starline - www.freepik.com</a>
 	</div>
 
 	<div class="footnote">
-		I used Node.JS, JavaScript, HTML, and CSS to create this simple but funtional website. Thanks to free resources in
-		youtube and experience to create this. Andrei Aquino 2021
+		I used Node.JS <i class="fab fa-node-js"></i>,
+		JavaScript <i class="fab fa-js-square"></i>, HTML <i class="fab fa-html5"></i>, and CSS <i class="fab fa-css3"></i>
+		to create this simple but
+		funtional website. Thanks to
+		free resources in
+		youtube <i class="fab fa-youtube"></i>, freepik, google <i class="fab fa-google"></i>, and my experience to create
+		this.
+		<p>2021</p>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
