--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
 							<h5>Bike Hobbyist</h5>
 							<p>New to this hobby</p>
 						</div>
-						<div class="col"><i class="fa fa-heart-o" aria-hidden="true"></i>
+						<div class="col"><i class="fas fa-paw"></i>
 							<h5>Pet Owner</h5>
 							<p>Furrdad, Meowddy</p>
 						</div>
@@ -87,6 +87,7 @@
 				</div>
 			</div>
 		</div>
+		<br>
 	</div>
 
 	<div class="container">
