about me page update

--- a/public/about.html
+++ b/public/about.html
@@ -5,24 +5,76 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>About Page</title>
+	<title>About Andrei</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+		integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Caveat&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 
-<body>
-	<div class="links">
-		<a href="/">Home Page</a>
+<body class="aboutpage">
+	<div class="aboutcontainer">
+		<h1>Andrei Martin Aquino</h1>
+		<h2>Web Developer <i class="fas fa-laptop-code"></i>, NodeJS Developer <i class="fab fa-node"></i>, & Java Developer
+			<i class="fab fa-java"></i>
+		</h2>
+		<div>
+			<img class="image" src="./images/kabayo.jpg" alt="this is me again">
+		</div>
+		<div>
+			<div class="aboutmetext">
+				I am Andrei Martin, graduate of ECE, web developer since 2018. I have experience in front-end and back-end
+				development by building software and web apps for known IT and Insurance companies for 3 years. I use Java
+				Spring Boot, Node.JS, VanillaJS, PHP, and AngularJS. This past year, due to pandemic, personal goals, and health
+				reasons. I focused on freelancing as well as
+				attending TESDA trainings related to web development, creative web design, and programming. I also take part on
+				engineering side hustle with my business partners. During free time, I love biking, coding, working on my
+				personal projects, eating, and spending time with my wife.
+				<p>Manila and Mandaluyong, Philippines</p>
+			</div>
+		</div>
+		<a href="/" class="btn">Return Home</a>
 	</div>
-	<div class="toppart">
-		<h1>About Page</h1><br>
-		A little bit of me :)
+	<div class="socmedicons">
+		<div>
+			<a href="#"><i class="fab fa-facebook-f"></i></a>
+			<a href="#"><i class="fab fa-linkedin-in"></i></a>
+			<a href="#"><i class="fab fa-google"></i></a>
+			<a href="#"><i class="fab fa-instagram"></i></a>
+		</div>
 	</div>
-
-	<p>I am Andrei Martin, web developer since 2018, I use Java Spring Boot, Node.JS, VanillaJS, PHP, and a little bit of
-		AngularJS</p>
-	<p>Still a work in progress but I can get the job done.</p>
-	<p>andreimartinbaquino@gmail.com | github.com/dreingineer | Manila and Mandaluyong, Philippines</p>
-
+	<div class="aboutmeworks">
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis rem
+				unde
+				molestiae
+				incidunt
+				accusamus vel, voluptatibus velit quis vero quae similique impedit suscipit tempore aliquid fuga! Mollitia
+				reiciendis nesciunt distinctio?</div>
+			<div class="col-xs-12 col-sm-6 col-md-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore,
+				expedita.
+				Accusantium
+				repudiandae possimus consequatur obcaecati ipsam dolor placeat modi. Cum facere vitae, nesciunt nisi est et
+				necessitatibus quidem aperiam consequuntur.</div>
+			<div class="col-xs-12 col-sm-6 col-md-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis commodi
+				odio,
+				provident
+				itaque
+				ipsa perferendis quod vitae, reprehenderit accusamus officia harum ullam nulla, a maiores cumque. Eaque fugit
+				quis accusamus?</div>
+			<div class="col-xs-12 col-sm-6 col-md-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta distinctio
+				nemo quo
+				consectetur
+				earum recusandae fugiat totam quas, voluptatum perferendis officia nostrum cum rerum. Soluta perspiciatis saepe
+				deleniti voluptatum exercitationem.</div>
+		</div>
+	</div>
+	<div class="footnote">
+		<p><i class="far fa-copyright"></i>dreinodereview 2021</p>
+	</div>
 
 </body>
 
