--- a/public/index.html
+++ b/public/index.html
@@ -131,14 +131,15 @@
 	</div>
 
 	<div class="footnote">
-		I used Node.JS <i class="fab fa-node-js"></i>,
+		I used Node.JS <i class="fab fa-node"></i>,
 		JavaScript <i class="fab fa-js-square"></i>, HTML <i class="fab fa-html5"></i>, and CSS <i class="fab fa-css3"></i>
 		to create this simple but
 		funtional website. Thanks to
 		free resources in
 		youtube <i class="fab fa-youtube"></i>, freepik, google <i class="fab fa-google"></i>, and my experience to create
 		this.
-		<p>2021</p>
+
+		<p><i class="far fa-copyright"></i>dreinodereview 2021</p>
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
