--- a/public/index.html
+++ b/public/index.html
@@ -100,13 +100,13 @@
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12 info"></span><strong>RECOVERED: </strong><span></span><span
 					id="recovered"></span></div>
-			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>DECEASED(✝): </strong><span></span><span
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>DECEASED: </strong><span></span><span
 					id="deceased"></span>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>ACTIVE CASES: </strong><span></span><span
 					id="activecases"></span>
 			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>UPDATED(🔁): </strong><span></span><span
+			<div class="col-md-4 col-sm-6 col-xs-12"></span><strong>UPDATED: </strong><span></span><span
 					id="lastupdate"></span>
 			</div>
 		</div>
