ui and controller updates, email functionality

--- a/public/about.html
+++ b/public/about.html
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<div class="emailprompt">
-			You ceach me through email:
+			You reach me by email:
 		</div>
 		<div class="form-container">
 			<form class="contact-form">
@@ -51,10 +51,11 @@
 			</form>
 		</div>
 		<a href="/" class="btn">Return <i class="fas fa-home"></i></a>
-		<a href="/" class="btn" id="highfive">High Five <i class="far fa-hand-paper"></i></a>
+		<a href="/" class="btn" id="highfive">Send <i class="fas fa-envelope-square"></i></i></a>
 
 	</div>
 	<div class="socmedicons">
+		<div class="text">or via Social Media Accounts:</div>
 		<div>
 			<a href="#"><i class="fab fa-facebook-f"></i></a>
 			<a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -69,22 +70,27 @@
 					<i class="fab fa-angular"></i>
 					<i class="fab fa-node"></i>
 					<i class="fab fa-js-square"></i>
-				</div> Node.JS Developer of an Agile Scrum team of a
-				insurance company. Used
-				Node.JS as a middleware and Angular.JS to develop the front-end of E-recruitment and Non-Life insurance web
-				application, prioritizing mobile responsiveness. Consumed responses from exposed API from the back-end. Create
-				RESTful routes and http methods to
-				send request and post responses back to server. Work on new and modifies existing features, fix web app bugs.
-				Deploy features to UAT and Production.
+				</div>
+				<div class="text"><i>2019-2020:</i> Node.JS Developer of an Agile Scrum team of a
+					insurance company. Used
+					Node.JS as a middleware and Angular.JS to develop the front-end of E-recruitment and Non-Life insurance web
+					application, prioritizing mobile responsiveness. Consumed responses from exposed API from the back-end. Create
+					RESTful routes and http methods to
+					send request and post responses back to server. Work on new and modifies existing features, fix web app bugs.
+					Deploy features to UAT and Production.</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="footlogo">
 					<i class="fab fa-node"></i>
 					<i class="fab fa-js-square"></i>
 					<i class="fas fa-server"></i>
-				</div>Used Node.JS as back-end server and create RESTful API's to be used by front-end. Used Sequelize ORM as
-				middleware to MySQL, create business logic and CRUD algorithms for the models required by the project. Designed
-				ERD's to be used by the companies internal web app, based on the business requirements of stakeholders.
+				</div>
+				<div class="text"><i>2019:</i> Used Node.JS as back-end server and create RESTful API's to be used by front-end.
+					Used
+					Sequelize ORM as
+					middleware to MySQL, create business logic and CRUD algorithms for the models required by the project.
+					Designed
+					ERD's to be used by the companies internal web app, based on the business requirements of stakeholders.</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="footlogo">
@@ -92,9 +98,13 @@
 					<i class="fab fa-js-square"></i>
 					<i class="fas fa-code"></i>
 					<i class="fas fa-database"></i>
-				</div>As an associate solutions developer, used Java core, J2EE with Spring and Spring Boot framework, Maven to
-				manage dependencies to develop web applications. Experience in H2 memory database, Oracle, and MySQL with
-				workbench.
+				</div>
+				<div class="text"><i>2018-2019:</i> As an associate solutions developer, used Java core, J2EE with Spring and
+					Spring
+					Boot
+					framework, Maven to
+					manage dependencies to develop web applications. Experience in H2 memory database, Oracle, and MySQL with
+					workbench.</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3">
 				<div class="footlogo">
@@ -103,9 +113,14 @@
 					<i class="fab fa-node"></i>
 					<i class="fas fa-code"></i>
 					<i class="fas fa-database"></i>
-				</div>Software development internship with DICT and Private Company's projects. Develop web apps with senior
-				developers guide, using Java Core, JDBC, MySQL, J2EE, XML, Node.JS, JavaScript, HTML5, and CSS3. Also worked on
-				own project implementing all the web technologies learned from the internship.
+				</div>
+				<div class="text"><i>2018:</i> Software development internship with DICT and Private Company's projects. Develop
+					web
+					apps
+					with senior
+					developers guide, using Java Core, JDBC, MySQL, J2EE, XML, Node.JS, JavaScript, HTML5, and CSS3. Also worked
+					on
+					own project implementing all the web technologies learned from the internship.</div>
 			</div>
 		</div>
 	</div>
