--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,10 @@
 				<img class="logo" src="./images/dreingineerlogo.png" alt="">
 			</div>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="/about">About Me</a></li>
-				<li><a href="/chat">Let's Chat</a></li>
-				<li><a href="/visitorForm">Visitor's Wall</a></li>
-				<li><a href="#">Portfolio</a></li>
+				<li><a class="anavbar" href="/about">About Me</a></li>
+				<li><a class="anavbar" href="/chat">Let's Chat</a></li>
+				<li><a class="anavbar" href="/visitorForm">Visitor's Wall</a></li>
+				<li><a class="anavbar" href="#">Portfolio</a></li>
 			</ul>
 			<!-- <a href="javascript:void(0);" class="icon" onclick="toggleBurger()">
 				<i class="fa fa-bars"></i>
@@ -43,15 +43,18 @@
 	<div class="mobile-container">
 		<!-- Top Navigation Menu -->
 		<div class="topnav">
-			<a href="#home" class="active"><img class="logo" src="./images/dreingineerlogo.png" alt=""></a>
+			<div>
+				<a href="#home" class="active"><img class="logo" src="./images/dreingineerlogo.png" alt=""></a>
+			</div>
+			<a href="javascript:void(0);" class="icon" onclick="toggleBurger()">
+				<i class="fa fa-bars"></i>
+			</a>
 			<div id="myLinks">
 				<a class="pages" href="/about">About Me</a>
 				<a class="pages" href="/chat">Let's Chat</a>
 				<a class="pages" href="/visitorForm">Visitor's Wall</a>
 			</div>
-			<a href="javascript:void(0);" class="icon" onclick="toggleBurger()">
-				<i class="fa fa-bars"></i>
-			</a>
+
 		</div>
 		<!-- End smartphone / tablet look -->
 	</div>
@@ -121,9 +124,9 @@
 			</div>
 			<div class="footer-column">
 				<blockquote class="quote">
-					<p>Hi there! I am Andrei, 33 years old. I started developing web apps since 2018. This is my first personal
+					<p>Hi there! I am 33 years old. I started developing web apps since 2018. This is my first personal
 						site made out from scratch. Still, this is a work in progress and made of hardwork.</p>
-					<footer>Dreingineer</footer>
+					<footer>Andrei</footer>
 				</blockquote>
 			</div>
 		</div>
